Fixing some overflow stuff

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,24 @@
 
 .App {
   text-align: center;
-  overflow-x: hidden;
   background-color: $gray;
   min-height: 100vh;
 }
 
+.Background {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 450px;
+  height: 300px;
+  overflow: hidden;
+}
+
 .navbar {
   margin-bottom: 30px;
+}
+
+.jumbotron {
+  background-color: white !important;
+  border: 1px solid $blue;
 }
