--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $gray: #454749;
+$off-white: #e9ecef;
 $green: #00bc8c;
 $orange: #F39C12;
 $blue: #17a2b8;
